hphp/hack/test/typecheck/case_sensitive_inheritance1.php.exp
File "case_sensitive_inheritance1.php", line 8, characters 19-21:
B inherits a method named `foo` whose name differs from this one (`FOO`) only by case. (Typing[4393])
  File "case_sensitive_inheritance1.php", line 3, characters 19-21:
  It was inherited from A as `~~foo~~`. If you meant to override it, please use the same casing as the inherited method. Otherwise, please choose a different name for the new method
